--- a/source/RevitDevTool/View/SettingsView.xaml
+++ b/source/RevitDevTool/View/SettingsView.xaml
@@ -1,16 +1,15 @@
-<UserControl
-    x:Class="RevitDevTool.View.SettingsView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
-    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:settings="clr-namespace:RevitDevTool.View.Settings"
-    d:DesignHeight="630"
-    d:DesignWidth="600"
-    Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
-    mc:Ignorable="d">
+<UserControl x:Class="RevitDevTool.View.SettingsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:settings="clr-namespace:RevitDevTool.View.Settings"
+             d:DesignHeight="630"
+             d:DesignWidth="600"
+             Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
+             mc:Ignorable="d">
 
     <UserControl.Resources>
         <ResourceDictionary>
