--- a/source/RevitDevTool/View/TraceLogWindow.xaml
+++ b/source/RevitDevTool/View/TraceLogWindow.xaml
@@ -1,21 +1,20 @@
-<Window
-    x:Class="RevitDevTool.View.TraceLogWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:commands="clr-namespace:RevitDevTool.Commands"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="{x:Static commands:TraceCommand.CommandName}"
-    Width="600"
-    Height="700"
-    d:DesignHeight="700"
-    d:DesignWidth="600"
-    Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
-    BorderThickness="0"
-    ShowInTaskbar="False"
-    WindowStartupLocation="CenterOwner"
-    mc:Ignorable="d">
+<Window x:Class="RevitDevTool.View.TraceLogWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:commands="clr-namespace:RevitDevTool.Commands"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="{x:Static commands:TraceCommand.CommandName}"
+        Width="600"
+        Height="700"
+        d:DesignHeight="700"
+        d:DesignWidth="600"
+        Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
+        BorderThickness="0"
+        ShowInTaskbar="False"
+        WindowStartupLocation="CenterOwner"
+        mc:Ignorable="d">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -27,9 +26,8 @@
     </Window.Resources>
 
     <Grid>
-        <Frame
-            x:Name="ContentFrame"
-            Margin="0"
-            NavigationUIVisibility="Hidden" />
+        <Frame x:Name="ContentFrame"
+               Margin="0"
+               NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
