--- a/source/RevitDevTool/Theme/Design/DesignTimeResources.xaml
+++ b/source/RevitDevTool/Theme/Design/DesignTimeResources.xaml
@@ -1,6 +1,4 @@
-<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
         <ResourceDictionary Source="/MahApps.Metro;component/Styles/Controls.xaml" />
