--- a/source/RevitDevTool/View/Settings/Visualization/PolylineVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/Visualization/PolylineVisualizationSettingsView.xaml
@@ -1,16 +1,16 @@
-<UserControl
-    x:Class="RevitDevTool.View.Settings.Visualization.PolylineVisualizationSettingsView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
-    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:visualization="clr-namespace:RevitDevTool.ViewModel.Settings.Visualization"
-    d:DataContext="{d:DesignInstance visualization:PolylineVisualizationViewModel}"
-    d:DesignHeight="540"
-    d:DesignWidth="600"
-    mc:Ignorable="d">
+<UserControl x:Class="RevitDevTool.View.Settings.Visualization.PolylineVisualizationSettingsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:visualization="clr-namespace:RevitDevTool.ViewModel.Settings.Visualization"
+             d:Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
+             d:DataContext="{d:DesignInstance visualization:PolylineVisualizationViewModel}"
+             d:DesignHeight="540"
+             d:DesignWidth="600"
+             mc:Ignorable="d">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -21,101 +21,87 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <ScrollViewer
-        HorizontalScrollBarVisibility="Disabled"
-        VerticalScrollBarVisibility="Auto">
+    <ScrollViewer HorizontalScrollBarVisibility="Disabled"
+                  VerticalScrollBarVisibility="Auto">
         <StackPanel>
             <!--  Surface  -->
-            <GroupBox
-                Margin="0,0,0,8"
-                Header="Surface">
+            <GroupBox Margin="0,0,0,8"
+                      Header="Surface">
                 <StackPanel Margin="8">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <CheckBox
-                            VerticalAlignment="Center"
-                            Content="Show Surface"
-                            IsChecked="{Binding ShowSurface}" />
-                        <mah:ColorPicker
-                            Grid.Column="1"
-                            Width="{StaticResource ColorPickerWidth}"
-                            SelectedColor="{Binding SurfaceColor}" />
+                        <CheckBox VerticalAlignment="Center"
+                                  Content="Show Surface"
+                                  IsChecked="{Binding ShowSurface}" />
+                        <mah:ColorPicker Grid.Column="1"
+                                         Width="{StaticResource ColorPickerWidth}"
+                                         SelectedColor="{Binding SurfaceColor}" />
                     </Grid>
                     <StackPanel Margin="0,12,0,0">
                         <DockPanel>
                             <TextBlock Text="Diameter" />
-                            <TextBlock
-                                HorizontalAlignment="Right"
-                                Text="{Binding Diameter, StringFormat={}{0:F1} inch}" />
+                            <TextBlock HorizontalAlignment="Right"
+                                       Text="{Binding Diameter, StringFormat={}{0:F1} inch}" />
                         </DockPanel>
-                        <Slider
-                            Margin="0,4,0,0"
-                            IsSnapToTickEnabled="True"
-                            Maximum="6"
-                            Minimum="{Binding MinThickness, Mode=OneTime}"
-                            TickFrequency="0.2"
-                            TickPlacement="BottomRight"
-                            Value="{Binding Diameter}" />
+                        <Slider Margin="0,4,0,0"
+                                IsSnapToTickEnabled="True"
+                                Maximum="6"
+                                Minimum="{Binding MinThickness, Mode=OneTime}"
+                                TickFrequency="0.2"
+                                TickPlacement="BottomRight"
+                                Value="{Binding Diameter}" />
                     </StackPanel>
                     <StackPanel Margin="0,12,0,0">
                         <DockPanel>
                             <TextBlock Text="Transparency" />
-                            <TextBlock
-                                HorizontalAlignment="Right"
-                                Text="{Binding Transparency, StringFormat={}{0} %}" />
+                            <TextBlock HorizontalAlignment="Right"
+                                       Text="{Binding Transparency, StringFormat={}{0} %}" />
                         </DockPanel>
-                        <Slider
-                            Margin="0,4,0,0"
-                            IsSnapToTickEnabled="True"
-                            Maximum="100"
-                            Minimum="0"
-                            TickFrequency="10"
-                            TickPlacement="BottomRight"
-                            Value="{Binding Transparency}" />
+                        <Slider Margin="0,4,0,0"
+                                IsSnapToTickEnabled="True"
+                                Maximum="100"
+                                Minimum="0"
+                                TickFrequency="10"
+                                TickPlacement="BottomRight"
+                                Value="{Binding Transparency}" />
                     </StackPanel>
                 </StackPanel>
             </GroupBox>
 
             <!--  Polyline  -->
-            <GroupBox
-                Margin="0,0,0,8"
-                Header="Polyline">
+            <GroupBox Margin="0,0,0,8"
+                      Header="Polyline">
                 <Grid Margin="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <CheckBox
-                        VerticalAlignment="Center"
-                        Content="Show Polyline"
-                        IsChecked="{Binding ShowCurve}" />
-                    <mah:ColorPicker
-                        Grid.Column="1"
-                        Width="{StaticResource ColorPickerWidth}"
-                        SelectedColor="{Binding CurveColor}" />
+                    <CheckBox VerticalAlignment="Center"
+                              Content="Show Polyline"
+                              IsChecked="{Binding ShowCurve}" />
+                    <mah:ColorPicker Grid.Column="1"
+                                     Width="{StaticResource ColorPickerWidth}"
+                                     SelectedColor="{Binding CurveColor}" />
                 </Grid>
             </GroupBox>
 
             <!--  Direction  -->
-            <GroupBox
-                Margin="0,0,0,8"
-                Header="Direction">
+            <GroupBox Margin="0,0,0,8"
+                      Header="Direction">
                 <Grid Margin="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <CheckBox
-                        VerticalAlignment="Center"
-                        Content="Show Direction"
-                        IsChecked="{Binding ShowDirection}" />
-                    <mah:ColorPicker
-                        Grid.Column="1"
-                        Width="{StaticResource ColorPickerWidth}"
-                        SelectedColor="{Binding DirectionColor}" />
+                    <CheckBox VerticalAlignment="Center"
+                              Content="Show Direction"
+                              IsChecked="{Binding ShowDirection}" />
+                    <mah:ColorPicker Grid.Column="1"
+                                     Width="{StaticResource ColorPickerWidth}"
+                                     SelectedColor="{Binding DirectionColor}" />
                 </Grid>
             </GroupBox>
         </StackPanel>
