--- a/source/RevitDevTool/View/TraceLogPage.xaml
+++ b/source/RevitDevTool/View/TraceLogPage.xaml
@@ -1,20 +1,19 @@
-<Page
-    x:Class="RevitDevTool.View.TraceLogPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:RevitDevTool.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
-    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:system="clr-namespace:System;assembly=System.Runtime"
-    xmlns:view="clr-namespace:RevitDevTool.View"
-    xmlns:vm="clr-namespace:RevitDevTool.ViewModel"
-    d:DataContext="{d:DesignInstance vm:TraceLogPageViewModel}"
-    d:DesignHeight="600"
-    d:DesignWidth="450"
-    Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
-    mc:Ignorable="d">
+<Page x:Class="RevitDevTool.View.TraceLogPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:converters="clr-namespace:RevitDevTool.Converters"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
+      xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:system="clr-namespace:System;assembly=System.Runtime"
+      xmlns:view="clr-namespace:RevitDevTool.View"
+      xmlns:vm="clr-namespace:RevitDevTool.ViewModel"
+      d:DataContext="{d:DesignInstance vm:TraceLogPageViewModel}"
+      d:DesignHeight="600"
+      d:DesignWidth="450"
+      Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
+      mc:Ignorable="d">
 
     <Page.Resources>
         <ResourceDictionary>
@@ -33,86 +32,74 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <DockPanel
-            Grid.Row="0"
-            Margin="5"
-            LastChildFill="False">
-            <ToggleButton
-                Padding="7,4"
-                BorderThickness="0.5"
-                IsChecked="{Binding IsSettingsVisible, UpdateSourceTrigger=PropertyChanged}"
-                Style="{DynamicResource MahApps.Styles.ToggleButton.Circle}">
-                <Path
-                    Width="16"
-                    Height="16"
-                    Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                    Stretch="Uniform">
+        <DockPanel Grid.Row="0"
+                   Margin="5"
+                   LastChildFill="False">
+            <ToggleButton Padding="7,4"
+                          BorderThickness="0.5"
+                          IsChecked="{Binding IsSettingsVisible, UpdateSourceTrigger=PropertyChanged}"
+                          Style="{DynamicResource MahApps.Styles.ToggleButton.Circle}">
+                <Path Width="16"
+                      Height="16"
+                      Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                      Stretch="Uniform">
                     <Path.Style>
                         <Style TargetType="Path">
-                            <Setter Property="Data" Value="{StaticResource Settings}" />
+                            <Setter Property="Data"
+                                    Value="{StaticResource Settings}" />
                             <Style.Triggers>
-                                <DataTrigger
-                                    Binding="{Binding Path=IsChecked, RelativeSource={RelativeSource AncestorType=ToggleButton}}"
-                                    Value="True">
-                                    <Setter Property="Data" Value="{StaticResource ArrowLeft}" />
+                                <DataTrigger Binding="{Binding Path=IsChecked, RelativeSource={RelativeSource AncestorType=ToggleButton}}"
+                                             Value="True">
+                                    <Setter Property="Data"
+                                            Value="{StaticResource ArrowLeft}" />
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
                     </Path.Style>
                 </Path>
             </ToggleButton>
-            <StackPanel
-                HorizontalAlignment="Right"
-                DockPanel.Dock="Right"
-                Orientation="Horizontal">
-                <Button
-                    Padding="0"
-                    BorderThickness="0.5"
-                    Command="{Binding TraceLogViewModel.ClearCommand}"
-                    ToolTip="Clear Log">
-                    <StackPanel
-                        Margin="0"
+            <StackPanel HorizontalAlignment="Right"
+                        DockPanel.Dock="Right"
                         Orientation="Horizontal">
-                        <Path
-                            Width="14"
-                            Height="14"
-                            Margin="5,0,0,0"
-                            Data="{StaticResource ClearLog}"
-                            Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                            Stretch="Uniform" />
-                        <Label
-                            Margin="0"
-                            Content="Clear Log" />
+                <Button Padding="0"
+                        BorderThickness="0.5"
+                        Command="{Binding TraceLogViewModel.ClearCommand}"
+                        ToolTip="Clear Log">
+                    <StackPanel Margin="0"
+                                Orientation="Horizontal">
+                        <Path Width="14"
+                              Height="14"
+                              Margin="5,0,0,0"
+                              Data="{StaticResource ClearLog}"
+                              Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                              Stretch="Uniform" />
+                        <Label Margin="0"
+                               Content="Clear Log" />
                     </StackPanel>
                 </Button>
-                <Button
-                    Margin="5,0"
-                    Padding="0"
-                    BorderThickness="0.5"
-                    Command="{Binding TraceLogViewModel.ClearGeometryCommand}"
-                    ToolTip="Clear Geometry">
-                    <StackPanel
-                        Margin="0"
-                        Orientation="Horizontal">
-                        <Path
-                            Width="14"
-                            Height="14"
-                            Margin="5,0,0,0"
-                            Data="{StaticResource ClearGeometry}"
-                            Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                            Stretch="Uniform" />
-                        <Label
-                            Margin="0"
-                            Content="Clear Geometry" />
+                <Button Margin="5,0"
+                        Padding="0"
+                        BorderThickness="0.5"
+                        Command="{Binding TraceLogViewModel.ClearGeometryCommand}"
+                        ToolTip="Clear Geometry">
+                    <StackPanel Margin="0"
+                                Orientation="Horizontal">
+                        <Path Width="14"
+                              Height="14"
+                              Margin="5,0,0,0"
+                              Data="{StaticResource ClearGeometry}"
+                              Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                              Stretch="Uniform" />
+                        <Label Margin="0"
+                               Content="Clear Geometry" />
                     </StackPanel>
                 </Button>
-                <mah:ToggleSwitch
-                    MinWidth="0"
-                    ContentPadding="0"
-                    DataContext="{Binding TraceLogViewModel}"
-                    IsOn="{Binding IsStarted}"
-                    OffContent="{x:Null}"
-                    OnContent="{x:Null}">
+                <mah:ToggleSwitch MinWidth="0"
+                                  ContentPadding="0"
+                                  DataContext="{Binding TraceLogViewModel}"
+                                  IsOn="{Binding IsStarted}"
+                                  OffContent=""
+                                  OnContent="">
                     <mah:ToggleSwitch.Resources>
                         <!--  ReSharper disable Xaml.RedundantResource  -->
                         <GridLength x:Key="ToggleSwitchContentSpaceMargin">0</GridLength>
@@ -127,15 +114,14 @@
 
         <!--  Content  -->
         <Grid Grid.Row="1">
-            <Border
-                Margin="5,0,5,5"
-                Padding="2"
-                Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
-                BorderBrush="{DynamicResource MahApps.Brushes.Gray8}"
-                BorderThickness="1"
-                CornerRadius="6"
-                SnapsToDevicePixels="True"
-                Visibility="{Binding IsSettingsVisible, Converter={StaticResource InverseBoolToVisibility}}">
+            <Border Margin="5,0,5,5"
+                    Padding="2"
+                    Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
+                    BorderBrush="{DynamicResource MahApps.Brushes.Gray8}"
+                    BorderThickness="1"
+                    CornerRadius="6"
+                    SnapsToDevicePixels="True"
+                    Visibility="{Binding IsSettingsVisible, Converter={StaticResource InverseBoolToVisibility}}">
                 <ContentControl Content="{Binding TraceLogViewModel.LogTextBox}" />
             </Border>
 
