--- a/source/RevitDevTool/View/TraceLogWindow.xaml
+++ b/source/RevitDevTool/View/TraceLogWindow.xaml
@@ -6,8 +6,10 @@
         xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="{x:Static commands:TraceCommand.CommandName}"
+        MinWidth="600"
         Width="600"
-        Height="700"
+        MinHeight="400"
+        Height="800"
         d:DesignHeight="700"
         d:DesignWidth="600"
         Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
