--- a/source/RevitDevTool/View/Settings/LogSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/LogSettingsView.xaml
@@ -1,7 +1,6 @@
 <UserControl x:Class="RevitDevTool.View.Settings.LogSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:config="clr-namespace:RevitDevTool.Models.Config"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
              xmlns:logging="clr-namespace:Microsoft.Extensions.Logging;assembly=Microsoft.Extensions.Logging.Abstractions"
@@ -9,6 +8,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:settings="clr-namespace:RevitDevTool.ViewModel.Settings"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:enums="clr-namespace:RevitDevTool.Logging.Enums"
              d:Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
              d:DataContext="{d:DesignInstance settings:LogSettingsViewModel}"
              d:DesignHeight="850"
@@ -37,7 +37,7 @@
                                 MethodName="GetValues"
                                 ObjectType="{x:Type sys:Enum}">
                 <ObjectDataProvider.MethodParameters>
-                    <x:Type TypeName="config:LogSaveFormat" />
+                    <x:Type TypeName="enums:LogSaveFormat" />
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
 
@@ -45,7 +45,7 @@
                                 MethodName="GetValues"
                                 ObjectType="{x:Type sys:Enum}">
                 <ObjectDataProvider.MethodParameters>
-                    <x:Type TypeName="config:RollingInterval" />
+                    <x:Type TypeName="enums:RollingInterval" />
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
         </ResourceDictionary>
@@ -115,9 +115,9 @@
                                           IsOn="{Binding EnablePrettyJson}" />
                     </Grid>
 
-                    <Expander Header="Level Detection Keywords"
-                              IsExpanded="False"
-                              Margin="0,16,0,8">
+                    <Expander Margin="0,16,0,8"
+                              Header="Level Detection Keywords"
+                              IsExpanded="False">
                         <StackPanel>
                             <TextBlock Margin="0,4"
                                        FontSize="11"
