--- a/source/RevitDevTool/View/TraceLogPage.xaml
+++ b/source/RevitDevTool/View/TraceLogPage.xaml
@@ -1,7 +1,6 @@
 <Page x:Class="RevitDevTool.View.TraceLogPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:converters="clr-namespace:RevitDevTool.Converters"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
       xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
@@ -9,6 +8,7 @@
       xmlns:system="clr-namespace:System;assembly=System.Runtime"
       xmlns:view="clr-namespace:RevitDevTool.View"
       xmlns:vm="clr-namespace:RevitDevTool.ViewModel"
+      xmlns:converters="clr-namespace:RevitDevTool.View.Converters"
       d:DataContext="{d:DesignInstance vm:TraceLogPageViewModel}"
       d:DesignHeight="600"
       d:DesignWidth="450"
